added deploy configs

--- a/.storybook/_container.scss
+++ b/.storybook/_container.scss
@@ -1,5 +1,5 @@
 $css--font-face: true;
 $css--reset: true;
-@import "../libs/bootstrap3/bootstrap.css";
+@import "~tropical-components/src/bootstrap/bootstrap.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-@import "../libs/materialkit/material-kit.scss";
+@import "~tropical-components/src/ssb/tropical.scss";
